--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,4 +1,12 @@
 {
   "name": "nptel-exam-checklist-hybrid",
-  "app_id": ""
+  "app_id": "",
+  "integrations": {},
+  "type": "ionic1",
+  "watchPatterns": [
+    "scss/**/*",
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
+  ]
 }
