--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.2",
   "description": "nptel-exam-checklist-hybrid: An Ionic project",
   "dependencies": {
+    "cordova-plugin-console": "^1.0.7",
+    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-whitelist": "^1.3.2",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "cordova-android": "~6.3.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -20,7 +27,26 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-console@~1.0.4",
+    "cordova-plugin-splashscreen@~4.0.0",
+    "cordova-plugin-device@~1.1.3",
+    "cordova-plugin-whitelist@~1.3.0",
+    "cordova-plugin-statusbar@~2.2.0",
+    "ionic-plugin-keyboard@~2.2.1"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "ionic-plugin-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
